Security: Move API keys to environment variables
- Remove hardcoded Gemini API keys from services/gemini.ts
- Remove hardcoded Firebase config from services/firebase.ts
- Add .env to .gitignore to prevent committing secrets
- Add ENV_SETUP.md with setup instructions
- Add null checks for API key configuration

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ dist-ssr
 
 # Extension files (only on extension branch)
 chaimode-extension/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
