--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+# Environment variables (never commit)
+.env
+.env.local
+.env.*.local
+
+# Vercel / Firebase local state
+.vercel
+.firebase/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
