--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ chaimode-extension/
 .env
 .env.local
 .env.*.local
+.vercel
+
+# Kyutai TTS drop-in folder (vendor code / weights)
+tts/kyutai/vendor/
+
+# Firebase local state
+.firebase/
