--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "deploy": "npm run build && npx firebase-tools deploy",
     "deploy:hosting": "npm run build && npx firebase-tools deploy --only hosting",
+    "deploy:vercel": "npx vercel --prod",
     "deploy:cloudflare": "npm run build && wrangler pages deploy dist --project-name=eduos",
     "deploy:cloudflare:prod": "npm run build && wrangler pages deploy dist --project-name=eduos --branch=main"
   },
@@ -21,13 +22,17 @@
     "ogl": "^1.0.11",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-router-dom": "^6.28.0",
     "recharts": "^3.5.1",
     "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
     "firebase-tools": "^13.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "wrangler": "^3.0.0"
